# tsz

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: compression.rs
src/: compress.rs  delta.rs  lib.rs  svlq.rs  uvlq.rs  vlq.rs
tests/: macro-compress.rs
tsz-bench/: Cargo.toml  README.md
tsz-bench/benches/: compression.rs  real_world_v1.rs  real_world_v2.rs
tsz-bench/data/: TsXyzRows.parquet
tsz-compress/: Cargo.toml  config.toml
tsz-compress/benches/: compression.rs  real-data-compression.rs  real_world.rs
tsz-compress/src/: compress.rs  delta.rs  delta_new.rs  delta_zigzag.rs  deltadelta_new.rs  deltadelta_zigzag.rs  lib.rs  svlq.rs  uvlq.rs
tsz-compress/src/v2/: compress.rs  constants.rs  consts.rs  decode.rs  encode.rs  greedy_delta_v2.rs  halfvec.rs  mod.rs  queue.rs  tests.rs
tsz-compress/tests/: compress-v2.rs  macro-compress.rs
tsz-macro/: Cargo.toml
tsz-macro/src/: lib.rs
tsz_macro/: Cargo.toml
tsz_macro/src/: lib.rs  main.rs
