[workspace]
resolver = "2"
members = ["tsz-compress", "tsz-macro", "tsz-bench"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

[workspace.package]
version = "1.1.2"

[workspace.dependencies]
tsz-macro = { version = "1.1.0", path = "tsz-macro" }
tsz-compress = { version = "1.1.2", path = "tsz-compress" }
