[workspace]
resolver = "2"
members = ["tsz-compress", "tsz-macro", "tsz-bench"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

[workspace.package]
version = "1.1.3"

[workspace.dependencies]
tsz-macro = { version = "1.1.3", path = "tsz-macro" }
tsz-compress = { version = "1.1.3", path = "tsz-compress" }
