[package]
name = "tsz-bench"
edition = "2021"
authors = ["Jacob T. <jtrueb@northwestern.edu>"]
homepage = "https://github.com/qsib-cbie/tsz"
repository = "https://github.com/qsib-cbie/tsz"
description = "Delta-delta, Delta compression for time series data"
readme = "README.md"
version = { workspace = true }
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
tsz-compress = { workspace = true }
tsz-macro = { workspace = true }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
polars = { version = "0.35.4", features = ["parquet"] }
lz4_flex = "0.11.1"

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "real_world_v1"
harness = false

[[bench]]
name = "real_world_v2"
harness = false
