[package]
name = "tsz-compress"
edition = "2021"
authors = ["Jacob T. <jtrueb@northwestern.edu>"]
homepage = "https://github.com/trueb2/tsz"
repository = "https://github.com/trueb2/tsz"
description = "Delta-delta compression for time series data"
license = "MIT OR Apache-2.0"
categories = ["compression"]
keywords = ["time-series", "delta", "compression", "Gorilla", "serde"]
readme = "README.md"
version = { workspace = true }

[features]
default = []
std = []

[lib]
crate-type = ["rlib"]

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.17", default-features = false }
tsz-macro = { workspace = true }


[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "real_world"
harness = false
