[package]
name = "tsz-compress"
edition = "2021"
authors = ["Jacob T. <jtrueb@northwestern.edu>"]
homepage = "https://github.com/qsib-cbie/tsz"
repository = "https://github.com/qsib-cbie/tsz"
description = "Delta-delta, Delta compression for time series data"
license = "MIT OR Apache-2.0"
categories = ["compression"]
keywords = ["time-series", "delta", "compression", "Gorilla", "serde"]
readme = "README.md"
version = { workspace = true }

[features]
default = []
std = []
thin-vec = ["dep:thin-vec", "tsz-macro/thin-vec"]

[lib]
crate-type = ["rlib"]

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.17", default-features = false }
thin-vec = { version = "0.2.13", default-features = false, optional = true }
tsz-macro = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
