[package]
name = "tsz-macro"
edition = "2021"
homepage = "https://github.com/trueb2/tsz"
repository = "https://github.com/trueb2/tsz"
description = "Delta-delta compression for time series data"
license = "MIT OR Apache-2.0"
categories = ["compression"]
keywords = ["time-series", "delta", "compression", "Gorilla", "serde", "delta_new", "deltadelta_new"]
readme = "README.md"
version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.10", features = ["full"] }
