[package]
name = "tsz-macro"
edition = "2021"
homepage = "https://github.com/trueb2/tsz"
repository = "https://github.com/trueb2/tsz"
description = "Delta-delta compression for time series data"
license = "MIT OR Apache-2.0"
categories = ["compression"]
keywords = ["time-series", "delta", "compression", "Gorilla", "serde"]
readme = "README.md"
version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
itertools = "0.11.0"
proc-macro2 = "1.0.70"
